--- a/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
@@ -105,7 +105,7 @@
                                     <td>
                                       <input
                                         formControlName="policy_no"
-                                        type="number"
+                                        type="text"
                                         class="form-control"
                                         required
                                       />
@@ -320,7 +320,7 @@
                                   <td>
                                     <input
                                       formControlName="policy_no"
-                                      type="number"
+                                      type="text"
                                       class="form-control"
                                       required
                                     />
