--- a/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
@@ -26,8 +26,7 @@
             [ngClass]="coverTypeList().length > 0 ? 'bd-line' : ''"
           >
             <div>
-              <div class="row">
-                <div
+              <div
                   style="
                     padding: 2rem 0 0.4rem 0.7rem;
                     color: #868E96;
@@ -35,7 +34,10 @@
                 >
                   Lets get to know you
                 </div>
-                <div class="col">
+              <div class="row" style="background-color: red;">
+                
+
+                <div class="col" >
                   <div class="w-75">
                     <label class="required">Date of Birth</label>
                     <div>
@@ -85,9 +87,7 @@
                 <div
                   style="
                     padding: 2rem 0 0.4rem 0.7rem;
-                    color: #868E96;
-                    font-weight: 500;
-                  "
+                    color: #868E96;"
                 >
                   Select product details
                 </div>
@@ -183,6 +183,8 @@
                   </div>
                 </div>
               </div>
+
+              
             </div>
           </form>
         </div>
